<resources>
    <string name="app_name">MobileApplicationProject</string>
    <string name="todo">TODO</string>
    <string name="Register">Register</string>
    <string name="Email">E-mail</string>
    <string name="Password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="alex_johson">alex johson</string>
    <string name="TODO">TODO</string>
    <string name="text_detail">Indulge in comfort with the Chili Cheese Dog, a hearty delight boasting a beef hot dog smothered in rich chili, melted chedder cheese, and diced onions. Indulge in comfort with the Chili Cheese Dog hearty delight boasting a beef hot dog smothered in rich chili, melted cheddear cheese, and diced onions.</string>
    <string name="quantity">Quantity</string>
    <string name="todo1">TODO</string>
    <string name="plus">+</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="oder_summary">Oder Summary</string>
    <string name="subtotal">Subtotal</string>
    <string name="card">Card</string>
    <string name="delivery">Delivery</string>
    <string name="_0">$0</string>
    <string name="$0">$0</string>
    <string name="total_tax">Total Tax</string>
    <string name="enter_your_code">Enter Your Code</string>
    <string name="prace_order">Prace Order</string>
</resources>