<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/Register"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="40sp"
        android:layout_marginHorizontal="155sp"
        android:textColor="@color/register"
        />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="337dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/login_bg1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="15dp"
                android:backgroundTint="@color/form"
                android:background="@drawable/border">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Email"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:background="@drawable/border"
                    android:textColor="@color/placeholder"
                    android:drawableLeft="@drawable/baseline_account_circle_24"
                    android:drawablePadding="10dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="10dp"> <!-- Moved margin top here -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="15dp"
                android:backgroundTint="@color/form"
                android:background="@drawable/border">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Password"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:background="@drawable/border"
                        android:textColor="@color/placeholder"
                    android:drawableLeft="@drawable/baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/Register"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginTop="25dp"
            app:cornerRadius = "8dp"/>

    </LinearLayout>

</LinearLayout>
