<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="76dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="12dp"
                    android:src="@tools:sample/avatars"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/back" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView13"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <eightbitlab.com.blurview.BlurView
                    android:id="@+id/blurview"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/blur_background">

                    <EditText
                        android:id="@+id/editTextText"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="#00ffffff"
                        android:ems="10"
                        android:inputType="text"
                        android:padding="8dp"
                        android:text="@string/enter_your_code"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="14sp" />
                </eightbitlab.com.blurview.BlurView>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button"
                    style="@android:style/Widget.Button"
                    android:layout_width="145dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/apply_coupon"
                    android:textColor="@color/white"
                    tools:ignore="MissingClass" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:layout_marginBottom="16dp"
                android:text="@string/oder_summary"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <eightbitlab.com.blurview.BlurView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blur_background"
                app:blurOverlayColor="#20000000">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="186dp"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtotal"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="$0"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/textView24"
                    app:layout_constraintTop_toTopOf="@+id/textView24"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="49dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/delivery"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@+id/textView24"
                    app:layout_constraintTop_toBottomOf="@+id/textView24" />

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="$0"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView22"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView28"
                    app:layout_constraintTop_toBottomOf="@+id/textView28" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width=""
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Total Tax"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/textView22"
                    app:layout_constraintTop_toBottomOf="@+id/textView22" />

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="$0"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView32"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/textView32"
                    app:layout_constraintTop_toBottomOf="@+id/textView31" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="#60ffff"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView32"
                    app:layout_constraintVertical_bias="0.029999971" />

                <TextView
                    android:id="@+id/textView34"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="24dp"
                    android:text="Total"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView32" />

                <TextView
                    android:id="@+id/textView35"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$0"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/textView34"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/textView34" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            </eightbitlab.com.blurview.BlurView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_bg"
                android:text="@string/prace_order"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>