<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Activity.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="234dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="400dp">

                <ImageView
                    android:id="@+id/pic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="TODO"
                    android:scaleType="centerCrop"
                    android:src="@tools:sample/avatars"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/food" />

                <ImageView
                    android:id="@+id/BACKBTN"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@string/todo1"
                    android:cropToPadding="true"
                    android:src="@tools:sample/avatars"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/back" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="TODO"
                    android:src="@tools:sample/avatars"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:srcCompat="@drawable/favorite_white" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <eightbitlab.com.blurview.BlurView
                android:id="@id/blurView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/blur_background"
                app:blurOverlayColor="#20000000">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="title"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0$"
                            android:textColor="@color/orange"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp">

                        <RatingBar
                            android:id="@+id/ratingBar"
                            style="@android:style/Widget.DeviceDefault.RatingBar.Indicator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:numStars="5"
                            android:progressTint="#ffc106"
                            android:rating="3.4"
                            android:stepSize="0.0"
                            app:layout_constraintBaseline_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent" />

                        <ImageView
                            android:id="@+id/imageView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@tools:sample/avatars"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.88"
                            app:layout_constraintStart_toEndOf="@+id/ratingBar"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:srcCompat="@drawable/time" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="15min"
                            android:textSize="16dp"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/imageView11"
                            app:layout_constraintHorizontal_bias="0.92"
                            app:layout_constraintStart_toEndOf="@+id/ratingBar"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="3.4 Rating"
                            android:textSize="16dp"
                            android:textColor="@color/white"

                            app:layout_constraintEnd_toStartOf="@+id/textView5"
                            app:layout_constraintStart_toEndOf="@+id/ratingBar"
                            app:layout_constraintTop_toTopOf="@+id/textView5"
                            tools:ignore="MissingConstraints" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="Detail"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16sp"
                        android:text="@string/text_detail"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="16dp">

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/quantity"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintBottom_toStartof="parent"
                            app:layout_constraintBottom_toTopof="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:ignore="MissingConstraints" />

                        <TextView
                            android:id="@+id/minusbtn"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:background="@drawable/oval_bg"
                            android:gravity="center"
                            android:text="-"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintEnd_toTopOf="parent"
                            app:layout_constraintHorizontal_bias="0.09"
                            app:layout_constraintStart_toEndOf="@+id/textView11"
                            tools:ignore="MissingConstraints,NotSibling"
                            tools:layout_editor_absoluteY="0dp" />

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:gravity="center"
                            android:text="1"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@+id/minusbtn"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_marginStart="8dp"
                            android:background="@drawable/oval_bg"
                            android:gravity="center"
                            android:text="@string/plus"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@+id/textView13"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </eightbitlab.com.blurview.BlurView>

            <eightbitlab.com.blurview.BlurView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:blurOverlayColor="#20000000">

            </eightbitlab.com.blurview.BlurView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button"
                    style="@android:style/Widget.Button"
                    android:layout_width="154dp"
                    android:layout_height="52dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/button_bg"
                    android:drawableStart="@drawable/basket"
                    android:paddingStart="16dp"
                    android:text="Add to cart"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="Total Price"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0$"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button"
                    app:layout_constraintHorizontal_bias="0.06"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.58000004"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>